# vibeels

./: .gitignore  CHANGELOG.md  CITATION.cff  LICENSE  README.md  RELEASE.md  pyproject.toml  run_vibeels.py  z-ToDo.md
asset/icons/: vibeels.icns
tests/: test_processing.py
vibeels/: __init__.py  app.py  processing.py  theme.py  version.py
