[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vibeels"
dynamic = ["version"]
description = "PyQt application for vibrational EELS spectrum extraction and zero-loss calibration"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Dan Shim" }
]
license = "MIT"
license-files = ["LICENSE"]
keywords = ["eels", "hyperspy", "pyqt", "spectroscopy", "vibrational-eels"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering",
]
dependencies = [
  "numpy",
  "joblib",
  "matplotlib",
  "lmfit",
  "hyperspy",
  "PyQt6",
]

[project.urls]
Homepage = "https://github.com/danshim/vibeels"
Repository = "https://github.com/danshim/vibeels"
Issues = "https://github.com/danshim/vibeels/issues"
Changelog = "https://github.com/danshim/vibeels/blob/main/CHANGELOG.md"

[project.scripts]
vibeels = "vibeels.app:main"

[tool.setuptools.dynamic]
version = { attr = "vibeels.version.__version__" }

[tool.setuptools.packages.find]
include = ["vibeels*"]

[tool.setuptools.package-data]
vibeels = ["assets/icons/*.png"]
